// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Chip Interactive Chips 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: #ececfd;
  color: #0f0f17;
  border: 0.0625rem solid #413ed6;
  cursor: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover {
  background: #dad9fb;
}

.emotion-2>:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-3 {
  cursor: pointer;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #0f0f17;
  width: 0.875rem;
  height: 0.875rem;
}

.emotion-5 path {
  fill: #0f0f17;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: white;
  color: #0f0f17;
  border: 0.0625rem solid #cfd7e5;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-6:hover {
  background: #F9FAFC;
}

.emotion-6>:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background: #cfd7e5;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
        data-testid="chip"
      >
        <div>
          Label
        </div>
        <div
          className="emotion-3"
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-6"
        data-testid="chip"
        onClick={[Function]}
      >
        <div>
          Label
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-6"
        data-testid="chip"
        onClick={[Function]}
      >
        <div>
          Label
        </div>
        <div
          className="emotion-8"
          data-testid="badge"
        >
          5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Read-Only Chips 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: #ffe7ec;
  color: #0f0f17;
  border: 0.0625rem solid #e5143d;
  cursor: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover {
  background: #ffd0d9;
}

.emotion-2>:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  border: 0.0625rem solid #e7ebf2;
  box-sizing: border-box;
  background: #FF1744;
  overflow: hidden;
  position: relative;
  font-size: 0.5rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-4 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
        data-testid="chip"
      >
        <div>
          Label
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
        data-testid="chip"
      >
        <div>
          <div
            className="emotion-4"
          >
            
            KN
          </div>
        </div>
        <div>
          Label
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
        data-testid="chip"
      >
        <div>
          <div
            className="emotion-4"
          >
            <img
              src="https://mui.com/static/images/avatar/1.jpg"
            />
          </div>
        </div>
        <div>
          Label
        </div>
      </div>
    </div>
  </div>
</div>
`;
